--- a/task2/ducati.html
+++ b/task2/ducati.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <h1><center>Ducati panigale V4</center></h1>
-    <p><b><a href="./aboutpage.html">about company</a></b></p>
+    <p><b><a href="./aboutpage.html">company outlets</a></b></p>
     <p></p><b><a href="./contact details.html">contacts</a></b></p>
     <p>Ducati Panigale V4 is a super bike available in 3 variants and 3 colours. The Ducati Panigale V4 is powered by 1103cc BS6 engine which develops a power of 212.5 bhp and a torque of 123.6 Nm. With both front and rear disc brakes, Ducati Panigale V4 comes up with anti-locking braking system.</p>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-15083099.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-koprivakart-18865723.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-9618542.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-11026288.jpg"alt="no image"/>
-    <img width="49%" src="/front-end/task2/images/pexels-koprivakart-18865717.jpg"alt="no image"/>
-    <img width="49%" src="/front-end/task2/images/pexels-koprivakart-18865726.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-15083101.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-13282418.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-13282419.jpg"alt="no image"/>
-    <img width="24%" src="/front-end/task2/images/pexels-stephanlouis-15083104.jpg"alt="no image"/>
-    <img width="49%" src="/front-end/task2/images/pexels-stephanlouis-9618540.jpg"alt="no image"/>
-    <img width="49%" src="/front-end/task2/images/pexels-stephanlouis-15083099.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-15083099.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-koprivakart-18865723.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-9618542.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-11026288.jpg"alt="no image"/>
+    <img width="49%" src="/front_end/front-end/task2/images/pexels-koprivakart-18865717.jpg"alt="no image"/>
+    <img width="49%" src="/front_end/front-end/task2/images/pexels-koprivakart-18865726.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-15083101.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-13282418.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-13282419.jpg"alt="no image"/>
+    <img width="24%" src="/front_end/front-end/task2/images/pexels-stephanlouis-15083104.jpg"alt="no image"/>
+    <img width="49%" src="/front_end/front-end/task2/images/pexels-stephanlouis-9618540.jpg"alt="no image"/>
+    <img width="49%" src="/front_end/front-end/task2/images/pexels-stephanlouis-15083099.jpg"alt="no image"/>
 
 
 
