--- a/work1/index.html
+++ b/work1/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <h1>bmw</h1>
+    <ol>
+        <li>cars</li>
+        <ul>
+            <li>bmw</li>
+
+            <li>m2</li>
+        </ul>
+    </ol>
     <p><a href="./about.html">about page</a></p>
     <p><a href="./pages/pro.html">pro</a></p>
     <p><a href="./pages/single/one.html">one</a></p>
