--- a/css/work2/work2.html
+++ b/css/work2/work2.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>puma</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&display=swap" rel="stylesheet">
     <style>
         #a{
         color:rgb(255, 0, 0);
@@ -14,6 +17,10 @@
         }
         a{
             color:rgb(0, 217, 255)
+        }
+        h1{
+                                                                            /* google fonts */
+            font-family: "Edu VIC WA NT Beginner", cursive;           
         }
     </style>
     
