--- a/css/sampletask10/index.html
+++ b/css/sampletask10/index.html
@@ -25,24 +25,55 @@
             <img src="./images/image-web-3-desktop.jpg" alt="">
 
             </div>
-            <!-- <div class="ltext">
-                <h1>THE BRIGHT FUTURE OF WEB 3.0?</h1>
+            <div class="limg">
+                <div class="ltext">
+                    <h1>THE BRIGHT</h1>
+                    <h1>FUTURE OF</h1> 
+                    <h1>  WEB 3.0?</h1>
+                </div>
+                <div class="rtext">
+                    <p class="p1">we dive into the next evolution of the web that claims to put the power of the plateform back into the hands of the people .but is it really fulfilling its promise?</p>
+                    <button>READ MORE</button>
             </div>
-            <div class="rtext">
-                <p>hey yo!</p>
-            </div> -->
+            </div>
         </div>
         <div class="right1">
-            <h4>NEW</h4>
+            <h2>NEW</h2>
             <h3>hydrogen vs electric cars</h3>
-            <p>will hydrogen-fueled cars ever catch up to EVs</p>
+            <p class="p">will hydrogen-fueled cars ever catch up to EVs</p>
             <hr><h3>The downloads of AI Artistry</h3>
-            <P>what are the possible adverse effect of on-demand AI image generation?</P>
+            <P class="p">what are the possible adverse effect of on-demand AI image generation?</P>
             <hr>
             <h3>is VC Funding Drying Up?</h3>
-            <p>private funding by VC firms is down 50% YOY.we take a look at what that means</p>
+            <p class="p">private funding by VC firms is down 50% YOY.we take a look at what that means</p>
         </div>
+    </div>
+    <div class="second">
+            <div class="sec1">
+                <div class="img11"><img src="./images/image-retro-pcs.jpg" alt=""></div>
+                <div class="text11">
+                    <h3>01</h3>
+                    <h5>reviving retro PCs</h5>
+                    <p class="p4">what happens when old PCs are given modern upgrades</p>
+                </div>
 
+            </div>
+            <div class="sec1">
+            <div class="img11"><img src="./images/image-top-laptops.jpg" alt=""></div>
+            <div class="text11"><h3>02</h3>
+                <h5>Top 10 Laptops of 2022</h5>
+            <p class="p4">our bestpics for various needs and budgets.</p></div>
+            </div>
+
+
+
+            <div class="sec1">
+                <div class="img11"><img src="./images/image-gaming-growth.jpg" alt=""></div>
+                <div class="text11"><h3>03</h3>
+                <h5>The Growth of Gaming</h5>
+                <p class="p4">how the pandemic has sparked fresh opportunities.</p>
+            </div>
+            </div>
     </div>
 
 </body>
