--- a/css/sampletask10/index.html
+++ b/css/sampletask10/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
     <div class="nav">
         <div class="left">
             <img src="./images/logo.svg" alt="">
@@ -38,7 +39,7 @@
             </div>
         </div>
         <div class="right1">
-            <h2>NEW</h2>
+            <h2 class="y">NEW</h2>
             <h3>hydrogen vs electric cars</h3>
             <p class="p">will hydrogen-fueled cars ever catch up to EVs</p>
             <hr><h3>The downloads of AI Artistry</h3>
@@ -73,7 +74,7 @@
                 <h5>The Growth of Gaming</h5>
                 <p class="p4">how the pandemic has sparked fresh opportunities.</p>
             </div>
-            </div>
+        </div>
     </div>
 
 </body>
