--- a/css/samplework11/index.html
+++ b/css/samplework11/index.html
@@ -9,7 +9,42 @@
 <div>
 <body>
     <div class="main">
-        contact us
+        <h4>Contact Us</h4>
+        <div class="child1">
+            <!-- name -->
+            <div class="c1">
+                <div class="c11">
+                    <p>first Name*</p>
+                    <input type="text"></div>
+                <div class="c22">
+                    <p>Last name*</p>
+                    <input type="text"></div>
+            </div>
+            <!-- email -->
+            <div class="c2">   
+                <p>Email address*</p>
+                <input type="email" class="email">
+            </div>
+            <!-- checkbox -->
+            <div class="c3">
+                <p>Query Type*</p>
+            </div>
+            <div class="c4">
+                <div class="c31"><input class="t1" type="checkbox">general enquity</div>
+                <div class="c31"><input class="t1" type="checkbox">support request</div>
+            </div>
+            <!-- message -->
+            <div class="c5">
+                <p>message*</p>
+                <input type="text"class="message">
+            </div>
+            <!-- checkbox2 -->
+            <div class="c6">
+                <input type="checkbox">i consent to being contacted by the team*
+            </div>
+            <div class="c7">
+                <button>submit</button>
+            </div>
     </div>
 </div>
 </body>
