--- a/css/sampletask13/index.html
+++ b/css/sampletask13/index.html
@@ -10,7 +10,7 @@
     <!-- navbar -->
     <div class="nav">
       <div class="left">
-        <img src="./image/logo.svg" alt="" class="img3"/>
+        <img src="./image/logo.svg" alt="" class="img3" />
         <span>collections</span>
         <span>men</span>
         <span>women</span>
@@ -22,13 +22,60 @@
         <img src="./image/image-avatar.png" alt="" class="img1" />
       </div>
     </div>
-    <hr>
+    <hr />
     <!-- ------------- -->
-     <div class="parent">
-        <div class="child1">
-            <img src="./image/image-product-1.jpg" alt=""class="img4">
+
+    <div class="parent">
+      <!-- leftside -->
+      <div class="child1">
+        <img src="./image/image-product-1.jpg" alt="" class="img4" />
+        <div class="imgs">
+          <img
+            src="./image/image-product-1-thumbnail.jpg"
+            alt=""
+            class="imgs2"
+          />
+          <img
+            src="./image/image-product-2-thumbnail.jpg"
+            alt=""
+            class="imgs1"
+          />
+          <img
+            src="./image/image-product-3-thumbnail.jpg"
+            alt=""
+            class="imgs1"
+          />
+          <img
+            src="./image/image-product-4-thumbnail.jpg"
+            alt=""
+            class="imgs1"
+          />
         </div>
-        <div class="child2">hi</div>
-     </div>
+      </div>
+      <!-- rightside -->
+      <div class="child2">
+        <b><h6>SNEAKER COMPANY</h6></b>
+        <h1>Fall Limited Edition Sneakers</h1>
+        <p>
+          These low-profile sneakers are your perfect casual wear
+          companion.featuring a durable rubber out sole,they'll with stand
+          everything the weather can offer.
+        </p>
+        <!-- price -->
+        <div class="price">
+          <div class="pric"><h2>$125.00</h2></div>
+          <div class="dis">50%</div>
+        </div>
+        <p class="lt"><b>$250.00</b></p>
+        <!-- button -->
+        <div class="b">
+          <div class="items">
+          <button><img src="./image/icon-minus.svg" alt=""></button>
+          <button>0</button>
+          <button><img src="./image/icon-plus.svg" alt=""></button>
+        </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
