--- a/css/sampletask13/index.html
+++ b/css/sampletask13/index.html
@@ -69,10 +69,19 @@
         <p class="lt"><b>$250.00</b></p>
         <!-- button -->
         <div class="b">
-          <div class="items">
-          <button><img src="./image/icon-minus.svg" alt=""></button>
-          <button>0</button>
-          <button><img src="./image/icon-plus.svg" alt=""></button>
+          <div class="bleft">
+            <button class="b2">
+              <img src="./image/icon-minus.svg" alt="" />
+            </button>
+            <button class="b2"><b>0</b></button>
+            <button class="b2">
+              <img src="./image/icon-plus.svg" alt="" />
+            </button>
+          </div>
+          <div class="bright">
+          <button class="b0">
+            <img class="bimg" src="./image/icon-cart.svg" alt="" />add to cart
+          </button>
         </div>
         </div>
       </div>
