--- a/css/sampletask12/index.html
+++ b/css/sampletask12/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="but">
                     <button>
-                        <i class="fas fa-shopping-cart"></i> Add to Cart
+                        <i class="fas fa-shopping-cart"></i> add to cart
                     </button>                       
                 </div>
             </div>
