--- a/css/puma/index.html
+++ b/css/puma/index.html
@@ -60,15 +60,18 @@
         </div>
       </div>
       <!-- section1 -->
-      <div class="body2">
-        <div class="body21"></div>
-        <div class="body22"><img class="body2img" src="./images/Puma joins hands with NGO Parcham to fuel girls’ football dreams.jpeg" alt=""></div>
-        <div class="body23"><h5>NEW STYLE IN TOWN</h5>
+      <body>
+        <div class="body2">
+            <img class="body2img" src="./images/freepik-export-20240823060052f4zo.jpeg" alt="New Style">
+          <div class="body21"></div>
+          <div class="body23">
+            <h5>NEW STYLE IN TOWN</h5>
             <div class="body2buttons">
-                <button class="body2buttons1"> <b>SHOP MEN</b></button><button class="body2buttons1" > <b>SHOP WOMEN</b></button><button class="body2buttons1"> <b>SHOP KIDS</b></button>
-            </div>
-        
-        </div>
+              <button class="body2buttons1"><b>SHOP MEN</b></button>
+              <button class="body2buttons1"><b>SHOP WOMEN</b></button>
+              <button class="body2buttons1"><b>SHOP KIDS</b></button>
+            </div>  
+          </div>
         </div>
         <!-- -------section2------- -->
         <div class="section2">
@@ -92,6 +95,44 @@
             <button class="sec3but"> <b>SHOP NOW</b></button><button class="sec3but"> <b>EXPLORE NOW</b></button>
 
         </div>
+    </div>
+    <!-- section4 -->
+    <div class="section4">
+      <div class="sec41">
+        <img class="sec4img" src="./images/shoes (1).png" alt="" />
+        <div class="sec4div">
+          <div class="sec41left"><h3>Palermo Hairy Unisex Sneakers</h3></div>
+          <div class="sec41right"><b>₹6,999</b></div>
+        </div>
+      </div>
+      <div class="sec41">
+        <img class="sec4img" src="./images/shoes (2).png" alt="" />
+        <div class="sec4div">
+          <div class="sec41left"><h3>Palermo  Unisex Sneakers </h3></div>
+          <div class="sec41right"><b>₹6,999</b></div>
+        </div>
+      </div>
+      <div class="sec41">
+        <img class="sec4img" src="./images/shoes (3).png" alt="" />
+        <div class="sec4div">
+          <div class="sec41left"><h3>Palermo Players Lane Unisex Sneakers</h3></div>
+          <div class="sec41right"><b>₹6,999</b></div>
+        </div>
+      </div>
+      <div class="sec41">
+        <img class="sec4img" src="./images/shoes (4).png" alt="" />
+        <div class="sec4div">
+          <div class="sec41left"><h3>Palermo Vintage Unisex Sneakers</h3></div>
+          <div class="sec41right"><b>₹6,999</b></div>
+        </div>
+      </div>
+      <div class="sec41">
+        <img class="sec4img" src="./images/shoes (5).png" alt="" />
+        <div class="sec4div">
+          <div class="sec41left"><h3>Palermo Lth Unisex Sneakers</h3></div>
+          <div class="sec41right"><b>₹6,999</b></div>
+        </div>
+      </div>
     </div>
 
   </body>
