--- a/css/puma/index.html
+++ b/css/puma/index.html
@@ -134,6 +134,16 @@
         </div>
       </div>
     </div>
-
+    <!-- section5 -->
+    body>
+    <div class="section5">
+    <div class="sec51"><img class="sec5img" src="./images/sec5images (2).png" alt=""></div>
+    <div class="sec52"><img class="sec5img"src="./images/sec5images(1).png" alt=""></div>
+    <div class="sec53"><h1 class="sec5text1">EASY RIDER</h1>
+        <h2 class="sec5text2">AN EVERY DAY ICON</h2>
+        <button class="sec5but1"><b>SHOP NOW</b></button>
+        <button class="sec5but2"><b>EXPLORE MORE</b></button>
+</div>
+</div>
   </body>
 </html>
