--- a/css/puma/index.html
+++ b/css/puma/index.html
@@ -135,7 +135,6 @@
       </div>
     </div>
     <!-- section5 -->
-    body>
     <div class="section5">
     <div class="sec51"><img class="sec5img" src="./images/sec5images (2).png" alt=""></div>
     <div class="sec52"><img class="sec5img"src="./images/sec5images(1).png" alt=""></div>
@@ -143,6 +142,66 @@
         <h2 class="sec5text2">AN EVERY DAY ICON</h2>
         <button class="sec5but1"><b>SHOP NOW</b></button>
         <button class="sec5but2"><b>EXPLORE MORE</b></button>
+        <!-- footer -->
+        <div class="footer">
+          <div class="footer1">
+              <div class="fchild1"><b>SUPPORT</b></div>
+              <div class="fchild2"></div>
+              <div class="fchild3"><B>ABOUT</B></div>
+              <div class="fchild4">contact us</div>
+              <div class="fchild5">FAQs</div>
+              <div class="fchild6">company</div>
+              <div class="fchild7">promotion and sale</div>
+              <div class="fchild8">my account</div>
+              <div class="fchild9">corporate news</div>
+              <div class="fchild10">Track order</div>
+              <div class="fchild11">exchange and return policy</div>
+              <div class="fchild12">press center</div>
+              <div class="fchild13">shoe care</div>
+              <div class="fchild14">privacy policy</div>
+              <div class="fchild15">investors</div>
+              <div class="fchild16">tech glossary</div>
+              <div class="fchild17">terms and condition</div>
+              <div class="fchild18">sustainability</div>
+              <div class="fchild19">initiate Return/exchange</div>
+              <div class="fchild20">sneakers</div>
+              <div class="fchild21">careers</div>
+              <div class="fchild22">cookie settings</div>
+              <div class="fchild23"></div>
+              <div class="fchild24">store locator</div>
+              <div class="fchild25"></div>
+              <div class="fchild26"></div>
+              <div class="fchild27">PUMA Article</div>
+          </div>
+          <div class="footer2">
+          <H3 class="ftrtext1">STAY UP TO DATE</H3>
+          <p class="ftrtext2">Sign up for Email</p>
+          <img class="ftricon1" src="./images/youtube.png" alt="">
+          <img class="ftricon" src="./images/twitter.png" alt="">
+          <img class="ftricon" src="./images/pinterest.png" alt="">
+          <img class="ftricon" src="./images/instagram-logo.png" alt="">
+          <img class="ftricon" src="./images/facebook.png" alt="">
+          <H3 class="ftrtext2">EXPLORE</H3>
+          <button class="ftrbut"><img class="ftricon2" src="./images/Screenshot 2024-08-20 213342.png" alt=""></button>
+          <button class="ftrbut1"><img class="ftricon2" src="./images/Screenshot 2024-08-20 213342.png" alt=""></button>
+          </div>
+      </div>
+      <hr>
+      <div class="footer3">
+          <div class="ftrleft">
+          <img class="lastimg" src="./images/frt (1).png" alt="">
+          <img class="lastimg" src="./images/oooi.png" alt="">
+          <img class="lastimg" src="./images/oooo.png" alt="">
+          <img class="lastimg" src="./images/ftr2 (2).png" alt="">
+      </div>
+      <div class="ftrmid">
+          <button class="ftrindbut"><img class="ftrind" src="./images/india.png" alt=""></button>
+      </div>
+      <div class="ftrend">
+          <P class="ftrlastt">PUMA INDIA LTD,2024.ALLRIGHTS RESERVED.</P>
+          <P class="ftrlastt"><U>IMPRINT  AND LEGAL DATA</U></P>
+      </div>
+      </div>
 </div>
 </div>
   </body>
