--- a/css/puma/demo.html
+++ b/css/puma/demo.html
@@ -5,155 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .footer{
-            display:flex;
-            height:48vh;
+        .section5{
+            width: 100%;
+            height:90vh;
         }
-        .footer1{
-            background-color: rgb(0, 0, 0);
-            color: white;
-            width: 75%; 
-            display: grid; 
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: repeat(8,30px);
-            padding-left: 40px;
-            padding-top: 30px;
-            
+        .sec53{
+            position: absolute;
+            background-color: beige;
+            z-index: -3;
+            width:100%;
+            height:60%;
+            top:20%;
         }
-        .footer2{
-            background-color: rgb(0, 0, 0);
-            width:25%;
+        .sec51{
+            background-color: aqua;
+            z-index: -1;
+            position: absolute;
+            top:45%;
+            left: 5%;
+            width:40%;
+            height:50%;
         }
-        .ftrtext1{
-            margin-top:30px ;
-            color: white;
-        }
-        .ftrtext2{
-            color: white;
-        }
-        .ftricon{
-            margin-top: 30px;
-        margin-left:20px ;
-        }
-        .ftricon2{
-            width: 50px;
-        }
-        .ftrbut{
-            margin-top: 10px;
-            background-color: black;
-            border:1px solid white;
-            transition: 0.6s;
-            
-        }
-        .ftrbut1{
-            background-color: black;
-            border:1px solid white;
-            margin-left: 20px;
-            transition: 0.6s;
-        }
-        .ftrbut:hover{
-            border:1px solid purple;
-        }
-        .ftrbut1:hover{
-            border:1px solid purple;
-        }
-        hr{
-            color: rgb(84, 82, 82);
-            margin:0px 30px 0px 30px;
-        }
-        .footer3{
-            background-color: rgb(0, 0, 0);
-            height: 15vh;
-            display: flex;
-        }
-        .lastimg{
-            margin-left: 10px;
-            max-width: 30px;
-            max-height: 30px;
-            margin-top: 20px;
-        }
-        .ftrind{
-            width: 50px;
-            border-radius: 360px;
-            height:50px
-        }
-        .ftrindbut{
-            align-items: center;
-            background-color: black;
-            border: 1px solid white;
-            margin-left: 70vh;
-            margin-top: 20px;
-            transition: 0.6s;
-        }
-        .ftrindbut:hover{
-            border: 1px solid purple;
-        }
-        .ftrlastt{
-            color: grey;
-            font-size: 10px;
-            margin-left: 55vh;
+        .sec52{
+            background-color:blueviolet ;
+            position: absolute;
+            z-index: -2;
+            width: 57%;
+            height:90%;
+            left: 40%;
+            top:10%;
         }
     </style>
 </head>
 <body>
-    <div class="footer">
-        <div class="footer1">
-            <div class="fchild1"><b>SUPPORT</b></div>
-            <div class="fchild2"></div>
-            <div class="fchild3"><B>ABOUT</B></div>
-            <div class="fchild4">contact us</div>
-            <div class="fchild5">FAQs</div>
-            <div class="fchild6">company</div>
-            <div class="fchild7">promotion and sale</div>
-            <div class="fchild8">my account</div>
-            <div class="fchild9">corporate news</div>
-            <div class="fchild10">Track order</div>
-            <div class="fchild11">exchange and return policy</div>
-            <div class="fchild12">press center</div>
-            <div class="fchild13">shoe care</div>
-            <div class="fchild14">privacy policy</div>
-            <div class="fchild15">investors</div>
-            <div class="fchild16">tech glossary</div>
-            <div class="fchild17">terms and condition</div>
-            <div class="fchild18">sustainability</div>
-            <div class="fchild19">initiate Return/exchange</div>
-            <div class="fchild20">sneakers</div>
-            <div class="fchild21">careers</div>
-            <div class="fchild22">cookie settings</div>
-            <div class="fchild23"></div>
-            <div class="fchild24">store locator</div>
-            <div class="fchild25"></div>
-            <div class="fchild26"></div>
-            <div class="fchild27">PUMA Article</div>
-        </div>
-        <div class="footer2">
-        <H3 class="ftrtext1">STAY UP TO DATE</H3>
-        <p class="ftrtext2">Sign up for Email</p>
-        <img class="ftricon" src="./images/youtube.png" alt="">
-        <img class="ftricon" src="./images/twitter.png" alt="">
-        <img class="ftricon" src="./images/pinterest.png" alt="">
-        <img class="ftricon" src="./images/instagram-logo.png" alt="">
-        <img class="ftricon" src="./images/facebook.png" alt="">
-        <H3 class="ftrtext2">EXPLORE</H3>
-        <button class="ftrbut"><img class="ftricon2" src="./images/Screenshot 2024-08-20 213342.png" alt=""></button>
-        <button class="ftrbut1"><img class="ftricon2" src="./images/Screenshot 2024-08-20 213342.png" alt=""></button>
-        </div>
-    </div>
-    <hr>
-    <div class="footer3">
-        <div class="ftrleft">
-        <img class="lastimg" src="./images/frt (1).png" alt="">
-        <img class="lastimg" src="./images/oooi.png" alt="">
-        <img class="lastimg" src="./images/oooo.png" alt="">
-        <img class="lastimg" src="./images/ftr2 (2).png" alt="">
-    </div>
-    <div class="ftrmid">
-        <button class="ftrindbut"><img class="ftrind" src="./images/india.png" alt=""></button>
-    </div>
-    <div class="ftrend">
-        <P class="ftrlastt">PUMA INDIA LTD,2024.ALLRIGHTS RESERVED.</P>
-        <P class="ftrlastt"><U>IMPRINT  AND LEGAL DATA</U></P>
-    </div>
-    </div>
+    <div class="section5">
+        <div class="sec51"></div>
+        <div class="sec52"></div>
+        <div class="sec53"><h1 class="sec5text1">EASY RIDER</h1>
+            <h2 class="sec5text2">AN EVERY DAY ICON</h2>
+            <button class="sec5but1"><b>SHOP NOW</b></button>
+            <button class="sec5but2"><b>EXPLORE MORE</b></button>
+            </div>
 </body>
 </html>
