--- a/css/puma/demo.html
+++ b/css/puma/demo.html
@@ -11,36 +11,87 @@
         }
         .sec53{
             position: absolute;
-            background-color: beige;
+            background-color: rgb(42, 42, 40);
             z-index: -3;
             width:100%;
-            height:60%;
+            height:80%;
             top:20%;
         }
         .sec51{
             background-color: aqua;
             z-index: -1;
             position: absolute;
-            top:45%;
+            top:50%;
             left: 5%;
-            width:40%;
-            height:50%;
+            width:45%;
+            height:55%;
         }
         .sec52{
             background-color:blueviolet ;
             position: absolute;
             z-index: -2;
-            width: 57%;
-            height:90%;
-            left: 40%;
+            width: 50%;
+            height:100%;
+            left: 48%;
             top:10%;
         }
+        .sec5img{
+            width: 100%;
+            height: 100%;
+        }
+        .sec5text1 {
+  margin-left: 5%;
+  color: white;
+  margin-top: 1%;
+}
+.sec5text2 {
+  position: absolute;
+  top: 60;
+  margin-left: 5%;
+  margin-top: 5px;
+  left: 20;
+  color: white;
+}
+.sec5but1 {
+  position: absolute;
+  top: 120;
+  margin-top: 50px;
+  margin-left: 5%;
+  height: 50px;
+  width: 150px;
+  left: 20;
+  border: none;
+  background-color: white;
+  color: black;
+  transition: 0.5s;
+}
+.sec5but2 {
+  position: absolute;
+  top: 120;
+  margin-top: 50px;
+  margin-left: 18%;
+  height: 50px;
+  width: 150px;
+  border: none;
+  background-color: white;
+  color: black;
+  transition: 0.5s;
+  left: 200;
+}
+.sec5but2:hover {
+  background-color: black;
+  color: white;
+}
+.sec5but1:hover {
+  background-color: black;
+  color: white;
+}
     </style>
 </head>
 <body>
     <div class="section5">
-        <div class="sec51"></div>
-        <div class="sec52"></div>
+        <div class="sec51"><img class="sec5img" src="./images/sec5images (2).png" alt=""></div>
+        <div class="sec52"><img class="sec5img"src="./images/sec5images(1).png" alt=""></div>
         <div class="sec53"><h1 class="sec5text1">EASY RIDER</h1>
             <h2 class="sec5text2">AN EVERY DAY ICON</h2>
             <button class="sec5but1"><b>SHOP NOW</b></button>
