--- a/css/weekly_task/book_my_show/index.html
+++ b/css/weekly_task/book_my_show/index.html
@@ -1,56 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <!-- navbar -->
     <nav>
-        <div class="navleft">
-            <div class="navimg"><img src="./images/WhatsApp Image 2024-08-27 at 10.23.32_1a263daa.jpg" alt=""></div>
-            <div class="navsearch-container">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                </svg>
-                <input type="text" placeholder="Search for movies,events,playes,sports and activities">
-            </div>
+      <div class="navleft">
+        <div class="navimg">
+          <img
+            src="./images/WhatsApp Image 2024-08-27 at 10.23.32_1a263daa.jpg"
+            alt=""
+          />
         </div>
+        <div class="navsearch-container">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <circle cx="11" cy="11" r="8"></circle>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+          </svg>
+          <input
+            type="text"
+            placeholder="Search for movies,events,playes,sports and activities"
+          />
+        </div>
+      </div>
 
-        <div class="navright"> 
-            <div class="navright1">
-            <button class="navbut1">kochi </button>
-            <button class="navbut2">sign in</button>
+      <div class="navright">
+        <div class="navright1">
+          <button class="navbut1">kochi</button>
+          <button class="navbut2">sign in</button>
         </div>
         <div class="navright2">
-            <img src="./images/menu_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+          <img
+            src="./images/menu_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg"
+            alt=""
+          />
         </div>
-        </div>
+      </div>
     </nav>
     <nav class="nav2">
-        <div class="nav2left">
-            <span>movies</span>
-            <span>stream</span>
-            <span>events</span>
-            <span>playes</span>
-            <span>sports</span>
-            <span>activities</span>
-        </div>
-        <div class="nav2right">
-            <span>ListYourShow </span>
-            <span>Corporates</span>
-            <span>Offers</span>
-            <span>Gift Cards</span>
-        </div>
-        <!-- section1 -->
-        <div class="sec1">
-            <div class="sec1pic1"></div>
-            <div class="sec1pic2"></div>
-            <div class="sec1pic3"></div>
-        </div>
+      <div class="nav2left">
+        <span>movies</span>
+        <span>stream</span>
+        <span>events</span>
+        <span>playes</span>
+        <span>sports</span>
+        <span>activities</span>
+      </div>
+      <div class="nav2right">
+        <span>ListYourShow </span>
+        <span>Corporates</span>
+        <span>Offers</span>
+        <span>Gift Cards</span>
+      </div>
     </nav>
-</body>
+    <!-- section1 -->
+    <div class="section1">
+      <div><img src="./images/Screenshot 2024-08-28 220605.png" alt="" /></div>
+      <div><img src="./images/Screenshot 2024-08-28 220109.png" alt="" /></div>
+      <div><img src="./images/Screenshot 2024-08-28 220133.png" alt="" /></div>
+    </div>
+    <!-- section2 -->
+    <div class="section2">
+      <div class="sec2left"><p><b>Recommended Movies</b></p></div>
+      <div class="sec2right"><p>see all</p></div>
+  </div>
+  <div class="section2cards">
+      <div class="sec2card"><img src="./images/sec1card (1).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>8/10 20K Votes</span></div>
+      <div class="sec2card"><img src="./images/sec1card (2).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>9/10 20K Votes</span></div>
+      <div class="sec2card"><img src="./images/sec1card (3).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>9.5/10 20K Votes</span></div>
+      <div class="sec2card"><img src="./images/sec1card (4).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>8/10 20K Votes</span></div>
+      <div class="sec2card"><img src="./images/sec1card (5).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>7/10 20K Votes</span></div>
+  </div>
+  </body>
 </html>
