--- a/css/weekly_task/book_my_show/demo.html
+++ b/css/weekly_task/book_my_show/demo.html
@@ -28,7 +28,8 @@
             display: flex;
             flex-wrap: wrap;
             gap: 30px;
-            margin-left: 30px;
+            /* margin-left: 30px; */
+
             width: 98%;
             
         }
@@ -37,12 +38,18 @@
             width:17.5%;
             height:60vh;
             border-radius: 2%;
+            transition: 0.5s;
+            cursor: pointer;
+        }
+        .section2cards div:hover{
+            transform: scale(0.9);
         }
         .section2cards img{
             width: 100%;
             height:90%;
             border-top-left-radius:2%;
             border-top-right-radius:2%;
+            
         }
         .sec2star{
            max-width:25px;
