--- a/css/weekly_task/book_my_show/index.html
+++ b/css/weekly_task/book_my_show/index.html
@@ -76,12 +76,197 @@
       <div class="sec2left"><p><b>Recommended Movies</b></p></div>
       <div class="sec2right"><p>see all</p></div>
   </div>
-  <div class="section2cards">
-      <div class="sec2card"><img src="./images/sec1card (1).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>8/10 20K Votes</span></div>
-      <div class="sec2card"><img src="./images/sec1card (2).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>9/10 20K Votes</span></div>
-      <div class="sec2card"><img src="./images/sec1card (3).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>9.5/10 20K Votes</span></div>
-      <div class="sec2card"><img src="./images/sec1card (4).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>8/10 20K Votes</span></div>
-      <div class="sec2card"><img src="./images/sec1card (5).jpeg" alt=""><img class="sec2star"src="./images/star.svg" alt=""><span>7/10 20K Votes</span></div>
+  <div class="section2c">
+    <div class="sec2divc">
+        <div class="sec2img"><img src="./images/sec1card (1).jpeg" alt=""></div>
+        <div class="sec2name"><span>9/10 20k Vote</span></div>
+        <div class="sec2dis"><b>KILL</b>-action/thrille</div>
+    </div>
+    <div class="sec2divc">
+        <div class="sec2img"><img src="./images/sec1card (2).jpeg" alt=""></div>
+        <div class="sec2name">8/10 20k Vote</div>
+        <div class="sec2dis"><b>THE RAID</b>-crime/action</div>
+    </div>
+    <div class="sec2divc">
+        <div class="sec2img"><img src="./images/sec1card (3).jpeg" alt=""></div>
+        <div class="sec2name">9/10 20k Vote</div>
+        <div class="sec2dis"><b>CARS</b>-comedy/animation</div>
+    </div>
+    <div class="sec2divc">
+        <div class="sec2img"><img src="./images/sec1card (4).jpeg" alt=""></div>
+        <div class="sec2name">7/10 20k Vote</div>
+        <div class="sec2dis"><b>NO WAY UP</b>-action/thriller</div>
+    </div>
+    <div class="sec2divc">
+        <div class="sec2img"><img src="./images/sec1card (5).jpeg" alt=""></div>
+        <div class="sec2name">9/10 20k Vote</div>
+        <div class="sec2dis"> <b>JOHN WICK</b>-crime/action</div>
+    </div>
+</div>
+<!-- section3 -->
+<!-- <div class="section3"> -->
+  <div class="sec31"><img src="./images/bbe5ce3d9cc1c0fc2b4df6b755907a72.png" alt="">
+  <span><b>STREAM</b></span>
+<p><b>Endless Entertainment Anytime,Anywhere</b></p></div>
+  <div class="sec32"><span><b>the best of live events</b></span> </div>
+  <div class="sec33">
+      <div class="sec33c"><img src="./images/sm.png" alt=""></div>
+      <div class="sec33c"><img src="./images/sm1.png" alt=""></div>
+      <div class="sec33c"><img src="./images/sm3.png" alt=""></div>
+      <div class="sec33c"><img src="./images/sm4.png" alt=""></div>
+      <div class="sec33c"><img src="./images/sm5.png" alt=""></div>
   </div>
+<!-- </div> -->
+ <!-- section4 -->
+ <div class="section4">
+  <div class="sec41">
+    <div class="sec41head1">
+      <img
+        src="./images/play_circle_24dp_EA3323_FILL0_wght400_GRAD0_opsz24.svg"
+        alt=""
+      />
+    </div>
+    <div class="sec41head2">
+      <ul>
+        <li class="sec4li1"><b>PRIMIER</b></li>
+        <li class="sec4li2">watch new movie at home, every friday</li>
+      </ul>
+    </div>
+  </div>
+  <div class="sec42">
+    <div class="sec42left">
+      <ul>
+        <li class="sec4li1"><b>premier</b>s</li>
+        <li>brand new release every friday</li>
+      </ul>
+    </div>
+    <div class="sec42right">see more</div>
+  </div>
+  <div class="sec43">
+    <div class="sec43c">
+      <div class="sec43img"><img src="./images/sec4img.png" alt="" /></div>
+      <div class="sec45cdis"></div>
+      <li><b>twister & san Andress</b></li>
+      <li>English</li>
+    </div>
+    <div class="sec43c">
+      <div class="sec43img">
+        <img src="./images/sec4imgs (2).png" alt="" />
+      </div>
+      <div class="sec45cdis">
+        <li><b>Annete</b></li>
+        <li>English</li>
+      </div>
+    </div>
+    <div class="sec43c">
+      <div class="sec43img">
+        <img src="./images/sec4imgs (3).png" alt="" />
+      </div>
+      <div class="sec45cdis">
+        <li><b>fly me to the moon</b></li>
+        <li>English</li>
+      </div>
+    </div>
+    <div class="sec43c">
+      <div class="sec43img">
+        <img src="./images/sec4imgs (4).png" alt="" />
+      </div>
+      <div class="sec45cdis">
+        <li><b>twisters(preview)</b></li>
+        <li>English</li>
+      </div>
+    </div>
+    <div class="sec43c">
+      <div class="sec43img">
+        <img src="./images/sec4img(5).png" alt="" />
+      </div>
+      <div class="sec45cdis">
+        <li><b>DADDIO</b></li>
+        <li>English</li>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- section5 -->
+<div class="section2">
+  <div class="sec2left"><p><b>Recommended Movies</b></p></div>
+  <div class="sec2right"><p>see all</p></div>
+</div>
+<div class="section2c">
+<div class="sec2divc">
+    <div class="sec2img"><img src="./images/sec5 (1).png" alt=""></div>
+    <div class="sec2name"><span>9/10 20k Vote</span></div>
+    <div class="sec2dis"><b>KILL</b>-action/thrille</div>
+</div>
+<div class="sec2divc">
+    <div class="sec2img"><img src="./images/sec5 (2).png" alt=""></div>
+    <div class="sec2name">8/10 20k Vote</div>
+    <div class="sec2dis"><b>THE RAID</b>-crime/action</div>
+</div>
+<div class="sec2divc">
+    <div class="sec2img"><img src="./images/sec5 (3).png" alt=""></div>
+    <div class="sec2name">9/10 20k Vote</div>
+    <div class="sec2dis"><b>CARS</b>-comedy/animation</div>
+</div>
+<div class="sec2divc">
+    <div class="sec2img"><img src="./images/sec5 (4).png" alt=""></div>
+    <div class="sec2name">7/10 20k Vote</div>
+    <div class="sec2dis"><b>NO WAY UP</b>-action/thriller</div>
+</div>
+<div class="sec2divc">
+    <div class="sec2img"><img src="./images/sec5 (5).png" alt=""></div>
+    <div class="sec2name">9/10 20k Vote</div>
+    <div class="sec2dis"> <b>JOHN WICK</b>-crime/action</div>
+</div>
+</div>
+<!-- footer -->
+<footer class="footer">
+  <div class="footer-container">
+      <!-- Company Info -->
+      <div class="footer-section company-info">
+          <h2>Book My Show</h2>
+          <p>Your one-stop destination for booking tickets to movies, concerts, and events.</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="footer-section quick-links">
+          <h3>Quick Links</h3>
+          <ul>
+              <li><a href="#">Movies</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Offers</a></li>
+              <li><a href="#">Gift Cards</a></li>
+          </ul>
+      </div>
+
+      <!-- Contact Information -->
+      <div class="footer-section contact-info">
+          <h3>Contact Us</h3>
+          <p>Email: <a href="mailto:support@bookmyshow.com">support@bookmyshow.com</a></p>
+          <p>Phone: +1 (234) 567-8900</p>
+          <p>Address: 123 Movie Lane, Cinema City, CA 12345</p>
+      </div>
+
+      <!-- Social Media Links -->
+      <div class="footer-section social-media">
+          <h3>Follow Us</h3>
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
+      </div>
+  </div>
+
+  <!-- Legal Links -->
+  <div class="footer-legal">
+      <a href="#">Terms of Service</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Cookie Policy</a>
+  </div>
+
+  <!-- Copyright -->
+  <div class="footer-copyright">
+      <p>&copy; 2024 Book My Show. All rights reserved.</p>
+  </div>
+</footer>
   </body>
 </html>
