--- a/css/weekly_task/book_my_show/details.html
+++ b/css/weekly_task/book_my_show/details.html
@@ -68,6 +68,34 @@
     <!-- section1 -->
     <div class="section1"><img class="sec1img1"src="./images2/Screenshot 2024-08-30 142709.png" alt="">
         <div class="sec1card"><img src="./images2/sec1card (1).jpeg" alt=""> in cinemas</div>
+        <div class="sec1div2">
+          <UL>
+          <li class="sec1liu"><b>KILL</b></li>
+        </UL>
+          <div class="sec1li">
+            <div class="sec1liimg"><img src="./images/star.svg" alt=""></div>
+            <div class="sec1liimgdis"><b>9.1/10 (56.2k Vote) </b><button><b>Rate now</b></button></div>
+          </div>
+          <div class="sec1li2u">
+            <button>2D</button><button>Hindi</button>
+          </div>
+        <div class="sec1li3u"><ul><li><b>1hr 46m . Action . A . 5Jul,2024</b></li></ul></div>
+        </div>
+
     </div>
+    <!-- section2 -->
+     <div class="section2">
+      <h3>About the movie</h3>
+      <p>Army commando Amrit (Lakshya) finds out his true love Tulika (Tanya Maniktala) is en-route, he boards a New Delhi-bound train in a daring quest to derail the their eventual seperation. But when a gang of knife-wielding thieves led by the ruthless leader (Raghav Juyal) begin to terrorize innocent passengers on his train, Amrit takes them on himself in a death-defying kill-spree to save those around him - turning what should have been a typical commute into an adrenaline-fueled thrill ride.</p>
+     </div>
+     <hr>
+     <div class="section3">
+      <div class="sec3div1"><span>cast</span></div>
+      <div class="sec3div2">
+        <div class="sec3castimg"><img src="./images2/sec4imgs (1).png" alt=""></div>
+        <div class="sec3castimg"><img src="./images2/sec4imgs (2).png" alt=""></div>
+        <div class="sec3castimg"><img src="./images2/sec4imgs (3).png" alt=""></div>
+      </div>
+     </div>
 </body>
 </html>
