--- a/css/weekly_task/book_my_show/index.html
+++ b/css/weekly_task/book_my_show/index.html
@@ -78,7 +78,7 @@
   </div>
   <div class="section2c">
     <div class="sec2divc">
-        <div class="sec2img"><img src="./images/sec1card (1).jpeg" alt=""></div>
+        <div class="sec2img"><a href="./details.html"><img src="./images/sec1card (1).jpeg" alt=""></a></div>
         <div class="sec2name"><span>9/10 20k Vote</span></div>
         <div class="sec2dis"><b>KILL</b>-action/thrille</div>
     </div>
