--- a/css/bootstrap/work5.html
+++ b/css/bootstrap/work5.html
@@ -53,8 +53,8 @@
             appendAlert('Nice, you triggered this alert message!', 'success')
           })
         }</script>
-    <script src="./js/bootstrap.bundle.min.js">
+    <script src="./js/bootstrap.bundle.min.js"></script>
         
-    </script>
+    
 </body>
 </html>
