--- a/weekly_task/alen_solly/index.html
+++ b/weekly_task/alen_solly/index.html
@@ -27,11 +27,11 @@
 <nav>
     <img class="navlogo" src="./images/Screenshot 2024-09-05 104452.png" alt="">
     <UL class="navul1">
-        <li>PRODUCTS</li>
-        <li>NEW ARRIVALS</li>
-        <li>SPECIAL SIZES</li>
-        <li>WEDDING STORE</li>
-        <li>GIFT CARDS</li>
+        <li class="navli1">PRODUCTS</li>
+        <li class="navli1">NEW ARRIVALS</li>
+        <li class="navli1">SPECIAL SIZES</li>
+        <li class="navli1">WEDDING STORE</li>
+        <li class="navli1">GIFT CARDS</li>
         <li class="saletag">SALE</li>
       </UL>
         <div class="navsearch-container">
@@ -84,6 +84,27 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!-- container2 -->
+ <div class="container2">
+  <div class="container2divs"><img src="./images/saleround.jpeg" alt=""><div class="container1dis"><b>SALE</b></div></div>
+  <div class="container2divs"><img src="./images/Mens Clothing _ Cheap Trendy Clothes For Men Online Sale.jpeg" alt=""><div class="container1dis"><b>MENS</b></div></div>
+  <div class="container2divs"><img src="./images/womenround.jpeg" alt=""><div class="container1dis"><b>WOMENS</b></div></div>
+  <div class="container2divs"><img src="./images/kid1.jpeg" alt=""><div class="container1dis"><b>GIRLS</b></div></div>
+  <div class="container2divs"><img src="./images/kid2.jpeg" alt=""><div class="container1dis"><b>BOYS</b></div></div>
+  <div class="container2divs"><img src="./images/Gift Certificate - $50_00.jpeg" alt=""><div class="container1dis"><b>GIFT CARD</b></div></div>
+ </div>
+ <!-- container3 -->
+  <div class="container3">
+    <div class="container3divs1"><h3>Allen Solly is now available on APP!</h3>
+      <h6>Get Flat Rs.500 off on your first purchase. Valid on your first order on Allen Solly app above Rs 2000. T & C apply.</h6>
+      <div class="ctnr3div1child">
+      <div class="ctnr3div1img"><img src="./images/container2 (2).png" alt=""></div>
+      <div class="ctnr3div1img"><img src="./images/container2 (3).png" alt=""></div>
+    </div>
+    </div>
+    <div class="container3divs2"><img src="./images/container2 (4).png" alt=""></div>
+    <div class="container3divs3"><img src="./images/container2 (1).png" alt=""></div>
+  </div>
 <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
