--- a/weekly_task/alen_solly/index.html
+++ b/weekly_task/alen_solly/index.html
@@ -10,7 +10,6 @@
 <body>
   <nav class="nav1">
     <div class="nov1_left"><b>MORE BRANDS</b><img src="./images/keyboard_arrow_down_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-      
       <li class="li1">delivering to</li>
       <li class="li2"><b><u>Add delivery location</u></b></li>
     
@@ -105,6 +104,16 @@
     <div class="container3divs2"><img src="./images/container2 (4).png" alt=""></div>
     <div class="container3divs3"><img src="./images/container2 (1).png" alt=""></div>
   </div>
+  <!-- container4 -->
+   <div class="container4">
+    <hr>
+    <div class="container4img"><img src="./images/hrlogo.png" alt=""></div>
+    <hr>
+   </div>
+   <div class="container4dis">
+    <h2>DISCOVER OUR ONLINE EXCLUSIVE COLLECTIONS</h2>
+    <h6>Elevate Your Style: Shop the Freshest Styles from our Online Exclusive Collections</h6>
+   </div>
 <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
