--- a/weekly_task/alen_solly/demo.html
+++ b/weekly_task/alen_solly/demo.html
@@ -1,45 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
-    <style>
-        /* Set a custom height for the carousel */
-        .carousel-item img {
-            height: 400px; /* Adjust the height as needed */
-            object-fit: cover; /* Ensure images fill the area without distortion */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/demo.css">
+  <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
 </head>
 <body>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/carousel img (1).png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./images/carousel img (2).png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./images/carousel img (3).png" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
