--- a/weekly_task/alen_solly/index.html
+++ b/weekly_task/alen_solly/index.html
@@ -112,8 +112,15 @@
    </div>
    <div class="container4dis">
     <h2>DISCOVER OUR ONLINE EXCLUSIVE COLLECTIONS</h2>
-    <h6>Elevate Your Style: Shop the Freshest Styles from our Online Exclusive Collections</h6>
+    <h6>Elevate Your Style: Shop the Freshest Styles from our Online Exclusive Collections</h>
    </div>
+   <!-- container5 -->
+    <div class="container5">
+      <div class="container5divs"><img src="./images/container5pics (1).jpeg" alt=""><button class="c5but1"><B>PATTERN OF GOD</B></button></div>
+      <div class="container5divs"><img src="./images/container5pics (4).jpeg" alt=""><button class="c5but1"><b>BIRDS OF PARADISE</b></button></div>
+      <div class="container5divs"><img src="./images/container5.jpeg" alt=""><button class="c5but1"><b>SHELL SCAPE</b></button></div>
+      <div class="container5divs"><img src="./images/container5pics (2).jpeg" alt=""><button class="c5but1"><b>BAG BLITZ</b></button></div>
+    </div>
 <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
