--- a/weekly_task/alen_solly/index.html
+++ b/weekly_task/alen_solly/index.html
@@ -121,6 +121,72 @@
       <div class="container5divs"><img src="./images/container5.jpeg" alt=""><button class="c5but1"><b>SHELL SCAPE</b></button></div>
       <div class="container5divs"><img src="./images/container5pics (2).jpeg" alt=""><button class="c5but1"><b>BAG BLITZ</b></button></div>
     </div>
+    <!-- container6 -->
+     <div class="container6">
+        <div class="container6divs1"><h3>TRENDING STYLE</h3></div>
+      <div class="container6divs2">
+      <div class="container6divs"><img src="./images/container6.png" alt=""><div class="container6divsdis">
+      <div class="c6dtext">shirts</div>
+      <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+      <div class="c6dtext"><div class="c6round"></div>blue</div>
+    </div></div>
+      <div class="container6divs"><img src="./images/container61 (1).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container61 (3).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container61 (4).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container61 (5).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container61 (6).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container61 (7).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container6.png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      <div class="container6divs"><img src="./images/container61 (2).png" alt=""><div class="container6divsdis">
+        <div class="c6dtext">shirts</div>
+        <div class="c6dtext"><b>boys regular fit print <span class="c6spn1">$100</span> $50 </b><span class="c6spn2">50%off</span></div>
+        <div class="c6dtext"><div class="c6round"></div>blue</div>
+      </div></div>
+      </div>
+      </div>
+      <!-- container7 -->
+       <div class="container7">
+        <div class="container7dis1">
+        <div class="container7divs11"><img src="./images/container7div1.png" alt="">
+          <div class="container7dis">
+          <div class="c711"><img  src="./images/container7img2.png" alt=""></div>
+          <div class="c712"><h5>NEW ARRIVALS</h5>
+          <P><U>SHOP NOW</U></P></div>
+        </div>
+        </div>
+        </div>
+        <div class="container7divs2">
+          <div class="c7d2divs">.</div>
+        </div>
+       </div>
 <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
