--- a/weekly_task/alen_solly/index.html
+++ b/weekly_task/alen_solly/index.html
@@ -184,9 +184,100 @@
         </div>
         </div>
         <div class="container7divs2">
-          <div class="c7d2divs">.</div>
+          <div class="c7d2divs">
+            <div class="c7d2divs1"><img src="./images/container7scroll (1).png" alt=""></div>
+            <div class="c7d2divs2"><div class="c7dtext">casual trousers</div>
+            <div class="c7dtext"><b>men regular sol...  $100 </b></div>
+            <div class="c7dtext"><div class="c7round"></div>blue</div>
+          </div>
         </div>
+        <div class="c7d2divs">
+          <div class="c7d2divs1"><img src="./images/container7scroll (2).png" alt=""></div>
+          <div class="c7d2divs2"><div class="c7dtext">casual trousers</div>
+          <div class="c7dtext"><b>men regular sol...  $100 </b></div>
+          <div class="c7dtext"><div class="c7round"></div>blue</div>
+        </div>
+      </div>
+      <div class="c7d2divs">
+        <div class="c7d2divs1"><img src="./images/container7scroll (3).png" alt=""></div>
+        <div class="c7d2divs2"><div class="c7dtext">casual trousers</div>
+        <div class="c7dtext"><b>men regular sol...  $100 </b></div>
+        <div class="c7dtext"><div class="c7round"></div>blue</div>
+      </div>
+    </div>
+    <div class="c7d2divs">
+      <div class="c7d2divs1"><img src="./images/container7scroll (4).png" alt=""></div>
+      <div class="c7d2divs2"><div class="c7dtext">casual trousers</div>
+      <div class="c7dtext"><b>men regular sol...  $100 </b></div>
+      <div class="c7dtext"><div class="c7round"></div>blue</div>
+    </div>
+  </div>
        </div>
+       <!-- hr tag -->
+       <div class="container4">
+        <hr>
+        <div class="container4img"><img src="./images/hrlogo.png" alt=""></div>
+        <hr>
+        </div>
+        <!-- container8 -->
+         <div class="container8">
+        <img src="./images/banner.jpeg" alt="">
+        <div class="c8box">
+          <div class="c8div1"><img src="./images/box.png" alt=""></div>
+          <div class="c8div2"><h3>EARN POINTS </h3>
+          <SPAN>ON EVERY PURSHACE</SPAN></div>
+          <div class="c8div3"><P>register with us to get latest updates and spend your point to buy</P>
+          <button class="signupnow">SIGN UP NOW</button>
+          </div>
+        </div>
+         </div>
+         <!-- container9 -->
+          <div class="container9"><img src="./images/container9.png" alt=""></div>
+         <!-- container10 -->
+          <div class="container10">
+            <button><b>VIEW ALL PRODUCTS</b></button>
+          </div>
+          <!-- container11 -->
+           <div class="container11">
+            <div class="c111"><img src="./images/c11 (3).svg" alt=""><p>FREE SHIPPING</p></div>
+            <div class="c112"><img src="./images/c11 (1).svg" alt=""><P>RETURN WITHIN 15 DAYS</P></div>
+            <div class="c113"><img src="./images/c11 (2).svg" alt=""><P>EXPRESS DELIVERY IN STORE MODE</P></div>
+           </div>
+           <!-- footer -->
+           <div class="footer">
+            <div class="footerl">
+              <div class="child1"><b>NEED HELP?</b></div>
+              <div class="child2"><b>ABOUT US</b></div>
+              <div class="child3">Order Status</div>
+              <div class="child4">Aditya Birla Fashion & Retail Ltd
+              </div>
+              <div class="child5">Returns
+              </div>
+              <div class="child6">Find a Store
+              </div>
+              <div class="child7">FAQs
+              </div>
+              <div class="child8">Allen Solly Blogs
+              </div>
+              <div class="child9">Shipping Policy
+              </div>
+              <div class="child10">Terms and conditions For Membership Program</div>
+              <div class="child11">Return and Cancellation policy
+              </div>
+              <div class="child12">Bulk Order</div>
+              <div class="child13">Contact Us
+              </div>
+              <div class="child14"></div>
+              <div class="child15">ABOUT US</div>
+              <div class="child16"></div>
+            </div>
+            <div class="footerr">
+              <div class="childr1"><img src="./images/footer (2).png" alt=""></div>
+              <div class="childr2"><input type="text" id="name" name="name" placeholder="enter your email/mobile number">
+              </div>
+              <div class="childr3"><img src="./images/footer (1).png" alt=""></div>
+            </div>
+           </div>
 <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
