--- a/weekly_task/the_odin_project/index.html
+++ b/weekly_task/the_odin_project/index.html
@@ -221,7 +221,7 @@
         <div class="row">
 
             <div class="col-md-4">
-                <img src="../images/footer-odinlogo.png" alt="Logo" class="mb-3">
+                <img src="./images/home/odin-icon-22b41941.svg" alt="Logo" class="mb-3">
                 <p>High quality coding education maintained by an open source community.</p>
                 <div class="d-flex justify-content-start">
                     <a href="#" class="text-dark mr-3"><img src="../images/footer-icons.png" alt=""></a>
